js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-while-import-defer-empty-str-is-valid-assign-expr.js
let
x
=
0
;
while
(
!
x
)
{
x
+
+
;
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
;
reportCompare
(
0
0
)
;
