js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-while-import-defer-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
let
x
=
0
;
while
(
!
x
)
{
x
+
+
;
import
.
defer
(
)
;
}
;
